force-app/main/default/objects/CaseTransferSummary__c/CaseTransferSummary__c.object-meta.xml
<CustomObject>
    <label>Case Transfer Summary</label>
    <pluralLabel>Case Transfer Summaries</pluralLabel>
    <description>Stores AI-generated summaries for case transfer events. Each record represents one transfer and is controlled by the parent Case sharing model.</description>
    <nameField>
        <label>Summary ID</label>
        <type>AutoNumber</type>
        <displayFormat>CTS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>