force-app/main/default/objects/CaseTransferSummary__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <description>Lookup to the parent Case record this summary was generated for.</description>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Transfer Summaries</relationshipLabel>
    <relationshipName>Case_Transfer_Summaries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>