force-app/main/default/objects/CaseTransferSummary__c/fields/CustomerSentiment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSentiment__c</fullName>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Frustrated</fullName>
            </value>
            <value>
                <fullName>Angry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>