force-app/main/default/objects/CaseTransferSummary__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <description>Stores error details when Generation Status is Failed. Admin-only visibility enforced via FLS on Case_Summary_Admin_PS.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>