force-app/main/default/objects/CaseTransferSummary__c/fields/Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Notes__c</fullName>
    <label>Escalation Notes</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Notes about why the case was escalated or special handling instructions.</description>
</CustomField>