force-app/main/default/objects/CaseTransferSummary__c/fields/Generated_For__c.field-meta.xml
<CustomField>
    <fullName>Generated_For__c</fullName>
    <label>Generated For</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the user or queue this summary was generated for.</description>
</CustomField>