force-app/main/default/objects/CaseTransferSummary__c/fields/Generated_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Generated_Timestamp__c</fullName>
    <label>Generated Timestamp</label>
    <type>DateTime</type>
    <description>Date and time when the summary was generated by the AI system.</description>
</CustomField>