force-app/main/default/objects/CaseTransferSummary__c/fields/GeneratedFor__c.field-meta.xml
<CustomField>
    <fullName>GeneratedFor__c</fullName>
    <label>Generated For</label>
    <description>The Name of the User or Queue the case was transferred to at the time of summary generation.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>