force-app/main/default/objects/CaseTransferSummary__c/fields/Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Generation_Status__c</fullName>
    <label>Generation Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Status of the AI summary generation process.</description>
</CustomField>