force-app/main/default/objects/CaseTransferSummary__c/fields/GenerationStatus__c.field-meta.xml
<CustomField>
    <fullName>GenerationStatus__c</fullName>
    <label>Generation Status</label>
    <description>Tracks the current state of AI summary generation. Default: In Progress. Values: In Progress, Success, Failed.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>