force-app/main/default/objects/CaseTransferSummary__c/fields/GenerationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>GenerationTimestamp__c</fullName>
    <label>Generation Timestamp</label>
    <description>The date and time the summary was successfully generated or the failed-attempt timestamp.</description>
    <type>DateTime</type>
</CustomField>