force-app/main/default/objects/CaseTransferSummary__c/fields/KeyIssues__c.field-meta.xml
<CustomField>
    <fullName>KeyIssues__c</fullName>
    <label>Key Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>