force-app/main/default/objects/CaseTransferSummary__c/fields/LLMModelName__c.field-meta.xml
<CustomField>
    <fullName>LLMModelName__c</fullName>
    <label>LLM Model Name</label>
    <description>The specific AI model version used for summary generation (e.g., gpt-4-turbo). Admin-only visibility.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>