force-app/main/default/objects/CaseTransferSummary__c/fields/LLMResponseCode__c.field-meta.xml
<CustomField>
    <fullName>LLMResponseCode__c</fullName>
    <label>LLM Response Code</label>
    <description>The HTTP status code returned by the LLM API call. Admin-only visibility for diagnostics.</description>
    <type>Text</type>
    <length>10</length>
</CustomField>