force-app/main/default/objects/CaseTransferSummary__c/fields/Pending_Actions__c.field-meta.xml
<CustomField>
    <fullName>Pending_Actions__c</fullName>
    <label>Pending Actions</label>
    <description>AI-identified pending actions for the receiving agent and customer.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>