force-app/main/default/objects/CaseTransferSummary__c/fields/PendingActions__c.field-meta.xml
<CustomField>
    <fullName>PendingActions__c</fullName>
    <label>Pending Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>