force-app/main/default/objects/CaseTransferSummary__c/fields/Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Summary_Text__c</fullName>
    <label>Summary Text</label>
    <description>AI-generated transfer summary text for the case.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>