force-app/main/default/objects/CaseTransferSummary__c/fields/SummaryId__c.field-meta.xml
<CustomField>
    <fullName>SummaryId__c</fullName>
    <label>Summary External ID</label>
    <description>External identifier for the summary record used for upsert operations and cross-system references.</description>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>