force-app/main/default/objects/CaseTransferSummary__c/fields/SummaryText__c.field-meta.xml
<CustomField>
    <fullName>SummaryText__c</fullName>
    <label>Summary Text</label>
    <description>The generated summary text from the LLM. Contains the structured transfer context including case history, key issues, and pending actions. Supports up to 131,072 characters (Long Text Area max).</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>