force-app/main/default/objects/CaseTransferSummary__c/fields/Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Reason__c</fullName>
    <label>Transfer Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Reason why the case was transferred (escalation, routing, skill match, etc.).</description>
</CustomField>