force-app/main/default/objects/CaseTransferSummary__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>Transfer Date</label>
    <type>DateTime</type>
</CustomField>