force-app/main/default/objects/CaseTransferSummary__c/fields/TransferredFrom__c.field-meta.xml
<CustomField>
    <fullName>TransferredFrom__c</fullName>
    <label>Transferred From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TransferredFromSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>