force-app/main/default/objects/CaseTransferSummary__c/fields/TransferredFromQueue__c.field-meta.xml
<CustomField>
    <fullName>TransferredFromQueue__c</fullName>
    <label>Transferred From Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>