force-app/main/default/objects/CaseTransferSummary__c/fields/TransferredTo__c.field-meta.xml
<CustomField>
    <fullName>TransferredTo__c</fullName>
    <label>Transferred To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TransferredToSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>