force-app/main/default/objects/CaseTransferSummary__c/fields/TransferredToQueue__c.field-meta.xml
<CustomField>
    <fullName>TransferredToQueue__c</fullName>
    <label>Transferred To Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>